# ChessEngine

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: boost — копия.cmake  boost.cmake  gtest.cmake
cpp/: CMakeLists.txt  main.cpp
h/: CMakeLists.txt  attack.h  board.cpp  board.h  board_constants.h  init.cpp  init.h  move.cpp  move.h  util.h
inc/: board.hpp  board_constants.hpp  move.hpp  util.hpp
include/: board.hpp  board_constants.hpp  init.hpp  move.hpp  util.hpp  valid.hpp
main/: main.cpp
src/: board.cpp  init.cpp  makemove.cpp  move.cpp
test/: CMakeLists.txt  board_constants_test.cpp  constants_test.cpp  meta_test.cpp  number_of_perft_tests.py  perft_test.cpp  run_tests.cpp  sequence_test.cpp
